symbolrt/src/br/edu/ufcg/symbolrt/compiler/parser/TranslationUnit.java
/* Generated By:JavaCC: Do not edit this line. TranslationUnit.java */
package br.edu.ufcg.symbolrt.compiler.parser;

import java.io.BufferedInputStream;
import java.util.HashMap;
import java.util.ArrayList;
import java.util.LinkedHashMap;
import java.util.Map;
import java.util.Set;
import java.util.LinkedHashSet;
import java.util.List;
import java.util.LinkedList;

import br.edu.ufcg.symbolrt.compiler.synthesis.SynthesisUnit;
import br.edu.ufcg.symbolrt.compiler.parser.base.*;
import br.edu.ufcg.symbolrt.util.Constants;

/**
 * <code>TranslationUnit</code> Class. <br>
 * This class is responsible for syntactical, lexical and semantics analysis.<br>
 * In order to trigger the translation process, call
 * {@link TranslationUnit#init(java.io.BufferedInputStream)
 *
 * @author Jeanderson Barros Candido ( <a
 *         href="mailto:jbc.ufcg@gmail.com"
 *         >jbc.ufcg@gmail.com</a> )
 * 
 * @version 1.0 <br>
 *          SYmbolic Model-Based test case generation toOL for Real-Time systems
 *          (SYMBOLRT) <br>
 *          (C) Copyright 2010-2012 Federal University of Campina Grande (UFCG) <br>
 *          <a
 *          href="https://sites.google.com/a/computacao.ufcg.edu.br/symbolrt">
 *          https://sites.google.com/a/computacao.ufcg.edu.br/symbolrt</a>
 */
public class TranslationUnit implements TranslationUnitConstants {

        private static List<Element> clocks = null;
        private static Map<String, AbstractTIOSTS> models = null;
        private static Map<String, List<Integer>> typeTable = null;
        private static Map<String, List<Element>> paramTable = null;
        private static List<Token> gateIdentifiers = null;
        private static String specificationID = null;

    /**
     * Initializes the translation process
     * @param file The instantiated source
     * @param specName the name of the specification model
     */
        public static void init(BufferedInputStream file, String specName) {
                setUp();

                TranslationUnit.specificationID = specName;
                TranslationUnit parser = null;

                try {
                        parser = new TranslationUnit(file);
                        parser.systemRule();
                        SynthesisUnit.init();

                } catch (Exception e) {
                        e.printStackTrace();
                }
        }

        /**
	 * Initializes data structures responsible for checking and storage data 
	 */
        private static void setUp() {
                paramTable = new HashMap<String, List<Element>>();
                typeTable = new HashMap<String, List<Integer>>();
                clocks = new LinkedList<Element>();
                models = new LinkedHashMap<String, AbstractTIOSTS>();
                gateIdentifiers = new ArrayList<Token>();
        }

        /**
	 * Method used to get all {@link AbstractTIOSTS} models pre-compiled from source
	 */
        public static Map<String, AbstractTIOSTS> getModels() {
                return TranslationUnit.models;
        }

        /**
	 * Method used to get all action parameters found
	 */
        public static Map<String, List<Element>> getParamsTable() {
                return TranslationUnit.paramTable;
        }

    /**
	 * Method used to get all clocks definitions
	 */
        public static List<Element> getClocks() {
                return TranslationUnit.clocks;
        }

  void setInputAction(Token aux_tk1, AbstractTIOSTS  process) throws ParseException {
        AbstractAction action = new AbstractAction();
        action.setIdentifier(new Element(aux_tk1));
        action.setType(Constants.ACTION_INPUT);
        process.addInputAction(action);
  }

  void setOutputAction(Token aux_tk1, AbstractTIOSTS process) throws ParseException {
        AbstractAction action = new AbstractAction();
        action.setIdentifier(new Element(aux_tk1));
        action.setType(Constants.ACTION_OUTPUT);
        process.addOutputAction(action);
  }

  void setInternalAction(Token aux_tk1, AbstractTIOSTS process) throws ParseException {
        AbstractAction action = new AbstractAction();
        action.setIdentifier(new Element(aux_tk1));
        action.setType(Constants.ACTION_INTERNAL);
        process.addInternalAction(action);
  }

/* SYNTATICAL SPECIFICATION */
  final public Token binaryOperatorRule() throws ParseException {
        Token tk = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MULT_TK:
      tk = jj_consume_token(MULT_TK);
      break;
    case MOD_TK:
      tk = jj_consume_token(MOD_TK);
      break;
    case DIV_TK:
      tk = jj_consume_token(DIV_TK);
      break;
    case EQUIV_TK:
      tk = jj_consume_token(EQUIV_TK);
      break;
    case AND_TK:
      tk = jj_consume_token(AND_TK);
      break;
    case OR_TK:
      tk = jj_consume_token(OR_TK);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          {if (true) return tk;}
    throw new Error("Missing return statement in function");
  }

  final public Token unaryOperatorRule() throws ParseException {
        Token tk = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS_TK:
      tk = jj_consume_token(PLUS_TK);
      break;
    case MINUS_TK:
      tk = jj_consume_token(MINUS_TK);
      break;
    case NOT_TK:
      tk = jj_consume_token(NOT_TK);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          {if (true) return tk;}
    throw new Error("Missing return statement in function");
  }

  final public Token clockOperatorRule() throws ParseException {
        Token tk = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MORETHEN_TK:
      tk = jj_consume_token(MORETHEN_TK);
      break;
    case MORETHENEQUALS_TK:
      tk = jj_consume_token(MORETHENEQUALS_TK);
      break;
    case EQUALS_TK:
      tk = jj_consume_token(EQUALS_TK);
      break;
    case LESSTHEN_TK:
      tk = jj_consume_token(LESSTHEN_TK);
      break;
    case LESSTHENEQUALS_TK:
      tk = jj_consume_token(LESSTHENEQUALS_TK);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          {if (true) return tk;}
    throw new Error("Missing return statement in function");
  }

  final public Token relationalOperatorRule() throws ParseException {
        Token aux_tk = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DIFF_TK:
      aux_tk = jj_consume_token(DIFF_TK);
      break;
    case MORETHEN_TK:
    case MORETHENEQUALS_TK:
    case EQUALS_TK:
    case LESSTHEN_TK:
    case LESSTHENEQUALS_TK:
      aux_tk = clockOperatorRule();
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return aux_tk;}
    throw new Error("Missing return statement in function");
  }

  final public Token constantBodyRule() throws ParseException {
        Token aux_tk = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE_TK:
      aux_tk = jj_consume_token(TRUE_TK);
      break;
    case FALSE_TK:
      aux_tk = jj_consume_token(FALSE_TK);
      break;
    case INTEGER:
      aux_tk = jj_consume_token(INTEGER);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return aux_tk;}
    throw new Error("Missing return statement in function");
  }

  final public void systemRule() throws ParseException {
        Token tk = null;
    jj_consume_token(SYSTEM_TK);
    tk = jj_consume_token(IDENTIFIER);
    jj_consume_token(57);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONST_TK:
      jj_consume_token(CONST_TK);
                  System.out.println("Warning: constant definitions are not implemented yet");
      label_1:
      while (true) {
        jj_consume_token(IDENTIFIER);
        jj_consume_token(EQUALS_TK);
        constantBodyRule();
        jj_consume_token(57);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_1;
        }
      }
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CLOCKS_TK:
      jj_consume_token(CLOCKS_TK);
      tk = jj_consume_token(IDENTIFIER);
                  clocks.add(new Element(tk));
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 58:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_2;
        }
        jj_consume_token(58);
        tk = jj_consume_token(IDENTIFIER);
                                       clocks.add(new Element(tk));
      }
      jj_consume_token(57);
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    jj_consume_token(GATE_TK);
    label_3:
    while (true) {
      gateRule();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_3;
      }
    }
    label_4:
    while (true) {
      processRule();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PROCESS_TK:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_4;
      }
    }
    jj_consume_token(0);
  }

  final public void gateRule() throws ParseException {
        List<Integer> types = new ArrayList<Integer>();
        Token tk = null;
        int type = 0;
    tk = jj_consume_token(IDENTIFIER);
                          gateIdentifiers.add(tk);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OPEN_PAR_TK:
      jj_consume_token(OPEN_PAR_TK);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT_TK:
      case BOOL_TK:
        type = primitiveTypeRule();
        types.add(new Integer(type));
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 58:
            ;
            break;
          default:
            jj_la1[11] = jj_gen;
            break label_5;
          }
          jj_consume_token(58);
          type = primitiveTypeRule();
          types.add(new Integer(type));
        }
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      jj_consume_token(CLOSE_PAR_TK);
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    jj_consume_token(57);
                List<Integer> other = typeTable.put(tk.image, types);
                if (other != null) {
                        System.err.println("Error: Gate '" + tk.image +"' already exists");
                }
  }

  final public int primitiveTypeRule() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT_TK:
      jj_consume_token(INT_TK);
                  {if (true) return Constants.TYPE_INTEGER;}
      break;
    case BOOL_TK:
      jj_consume_token(BOOL_TK);
               {if (true) return Constants.TYPE_BOOLEAN;}
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public void processRule() throws ParseException {
        AbstractTransition trans = null;
        AbstractAction act = null;

        Token proc_tk = null;
        Token aux_tk1 = null;
        Token aux_tk2 = null;

        int type = 0;
    jj_consume_token(PROCESS_TK);
    proc_tk = jj_consume_token(IDENTIFIER);
    jj_consume_token(57);
        AbstractTIOSTS process = new AbstractTIOSTS(new Element(proc_tk));
        process.setIsSpecification(process.getName().equals(specificationID));
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INPUT_ACT_TK:
      jj_consume_token(INPUT_ACT_TK);
      aux_tk1 = jj_consume_token(IDENTIFIER);
                                       setInputAction(aux_tk1, process);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 58:
          ;
          break;
        default:
          jj_la1[15] = jj_gen;
          break label_6;
        }
        jj_consume_token(58);
        aux_tk2 = jj_consume_token(IDENTIFIER);
                                           setInputAction(aux_tk2, process);
      }
      jj_consume_token(57);
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    jj_consume_token(OUTPUT_ACT_TK);
    aux_tk1 = jj_consume_token(IDENTIFIER);
                                       setOutputAction(aux_tk1, process);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 58:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_7;
      }
      jj_consume_token(58);
      aux_tk2 = jj_consume_token(IDENTIFIER);
                                            setOutputAction(aux_tk2, process);
    }
    jj_consume_token(57);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTERNAL_ACT_TK:
      jj_consume_token(INTERNAL_ACT_TK);
      aux_tk1 = jj_consume_token(IDENTIFIER);
                                       setInternalAction(aux_tk1, process);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 58:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_8;
        }
        jj_consume_token(58);
        aux_tk2 = jj_consume_token(IDENTIFIER);
                                            setInternalAction(aux_tk2, process);
      }
      jj_consume_token(57);
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VARIABLES_TK:
      jj_consume_token(VARIABLES_TK);
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[20] = jj_gen;
          break label_9;
        }
        aux_tk1 = jj_consume_token(IDENTIFIER);
        jj_consume_token(59);
        type = primitiveTypeRule();
        jj_consume_token(57);
                 process.addVariable(new TypedElement(aux_tk1, type));
      }
      break;
    default:
      jj_la1[21] = jj_gen;
      ;
    }
    jj_consume_token(STATE_TK);
    label_10:
    while (true) {
      stateDeclarationRule(process);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INIT_STATE_TK:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_10;
      }
    }
    jj_consume_token(TRANSITION_TK);
    label_11:
    while (true) {
      trans = transitionRule();
                                                   process.addTransition(trans);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FROM_TK:
        ;
        break;
      default:
        jj_la1[23] = jj_gen;
        break label_11;
      }
    }
                List<TypedElement> actparams = new ArrayList<TypedElement>();
                for (Token gate_tk : gateIdentifiers) {
                        List<Element> params = paramTable.get(gate_tk.image);
                        List<Integer> types = typeTable.get(gate_tk.image);
                        if (params != null && types != null) {
                                for (int i = 0; i < params.size(); i++) {
                                        TypedElement te = new TypedElement(params.get(i).getToken(), types.get(i));
                                        if (!actparams.contains(te)) {
                                                actparams.add(te);
                                        }
                                }
                        }
                }
                for (TypedElement tp : actparams) {
                        process.addParameter(tp);
                }
                process.finishProcess();
                models.put(process.getName(), process);
  }

  final public void stateDeclarationRule(AbstractTIOSTS proc) throws ParseException {
        Token state_tk = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INIT_STATE_TK:
      jj_consume_token(INIT_STATE_TK);
      jj_consume_token(59);
      state_tk = jj_consume_token(IDENTIFIER);
      jj_consume_token(57);
                                                        proc.addState(new StateElement(state_tk, true));
      break;
    case IDENTIFIER:
      state_tk = jj_consume_token(IDENTIFIER);
      jj_consume_token(57);
